# autowire

./: README.md  pyproject.toml
autowire/: __init__.py  auth.py  cli.py  database.py  decorators.py  realtime.py
autowire/client/: __init__.py  http_client.py  ws_client.py
autowire/core/: __init__.py  loader.py  rate_limiter.py  router.py  server.py  ws_handler.py
examples/routes/: chat.py  users.py
tests/: test_auth.py  test_autowire.py  test_database.py  test_realtime.py
