[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "autowire"
version = "0.1.0"
description = "Drop-file Python API framework with automatic HTTP and WebSocket routing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Chitransh" }
]
keywords = ["asgi", "api", "websocket", "routing", "framework"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]
dependencies = [
  "uvicorn>=0.24",
]

[project.optional-dependencies]
client = [
  "aiohttp>=3.9",
  "ws-reconnect-manager>=0.1.0",
]
integrations = [
  "smart-api-limiter>=0.1.0",
  "ws-reconnect-manager>=0.1.0",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
autowire = "autowire.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["autowire"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
